--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="TinyTrackV2 - Child Development Center Management System" />
     <title>TinyTrackV2</title>
     
-    <!-- Preconnect to API -->
-    <link rel="preconnect" href="https://tinybackend-production.up.railway.app" />
+  <!-- Preconnect to API (use Vite env value at build time) -->
+  <link rel="preconnect" href="%VITE_API_URL%" />
   </head>
   <body>
     <div id="root"></div>
